trunk/Archive2/37/a9cb6a3304b374/output
main.cpp: In function 'std::vector<row> get_data(const char*)':
main.cpp:18:20: error: 'std::std' has not been declared
         throw std::std::ios_base::failure(filename + std::string(" not found"));
                    ^
main.cpp:19:27: error: 'istream_iterator' is not a member of 'std'
     std::vector<row> data(std::istream_iterator<row>(file), std::istream_iterator<row>());
                           ^
main.cpp:19:52: error: expected primary-expression before '>' token
     std::vector<row> data(std::istream_iterator<row>(file), std::istream_iterator<row>());
                                                    ^
main.cpp:19:61: error: 'istream_iterator' is not a member of 'std'
     std::vector<row> data(std::istream_iterator<row>(file), std::istream_iterator<row>());
                                                             ^
main.cpp:19:86: error: expected primary-expression before '>' token
     std::vector<row> data(std::istream_iterator<row>(file), std::istream_iterator<row>());
                                                                                      ^
main.cpp:19:88: error: expected primary-expression before ')' token
     std::vector<row> data(std::istream_iterator<row>(file), std::istream_iterator<row>());
                                                                                        ^
main.cpp:21:20: error: 'std::std' has not been declared
         throw std::std::ios_base::failure(std::string("invalid data in ") + filename);
                    ^
